--- a/index.html
+++ b/index.html
@@ -438,11 +438,11 @@
     </div>
 
     <!--ribbonUno-->
-    <div class="ribbonUno">
+    <div class="ministerio" id="ministerios">
 
-      <div class="multimedia__texto">
-        <h2 class="multimedia__titulo">Multimedia</h2>
-        <h3 class="multimedia__subtitulo">miralas! 📱 💻 </h3>
+      <div class="ministerio__texto">
+        <h2 class="ministerio__titulo">Ministerios</h2>
+        <h3 class="ministerio__subtitulo"> 📱 💻 </h3>
       </div>
 
       <!-- <p class="ribbonUno__titulo">"Hagan Planes ligados en el Espíritu"
@@ -450,20 +450,20 @@
       <img class="ribbonUno__img" src="img/avatarJavier.png" alt=""> -->
 
       <!-- Card 1 -->
-      <div class="ribbonUno__card" id="ministerios">
-        <div class="ribbonUno__card__imagen"></div>
-        <div class="ribbonUno__card__texto">
-          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-          <div class="ribbonUno__card__titulo">
-            <h2>Ministerios</h2>
+      <div class="ministerio__card">
+        <div class="ministerio__card__imagen ministerio__card__imagen--social"></div>
+        <div class="ministerio__card__texto">
+          <h3 class="ministerio__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministerio__card__titulo">
+            <h2>Accion Social</h2>
           </div>
-          <div class="ribbonUno__card__linea"></div>
-          <div class="ribbonUno__card__parrafo">
+          <div class="ministerio__card__linea"></div>
+          <div class="ministerio__card__parrafo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
               aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
               voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
           </div>
-          <div class="ribbonUno__card__btn">
+          <div class="ministerio__card__btn">
             <a href="cuarto.html">
               <input type="button" value="LEER MAS!">
             </a>
@@ -472,20 +472,20 @@
       </div>
 
       <!-- Card 2 -->
-      <div class="ribbonUno__card" id="ministerios">
-        <div class="ribbonUno__card__imagen"></div>
-        <div class="ribbonUno__card__texto">
-          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-          <div class="ribbonUno__card__titulo">
-            <h2>Ministerios</h2>
+      <div class="ministerio__card">
+        <div class="ministerio__card__imagen ministerio__card__imagen--evangelismo"></div>
+        <div class="ministerio__card__texto">
+          <h3 class="ministerio__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministerio__card__titulo">
+            <h2>Evangelismo</h2>
           </div>
-          <div class="ribbonUno__card__linea"></div>
-          <div class="ribbonUno__card__parrafo">
+          <div class="ministerio__card__linea"></div>
+          <div class="ministerio__card__parrafo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
               aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
               voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
           </div>
-          <div class="ribbonUno__card__btn">
+          <div class="ministerio__card__btn">
             <a href="cuarto.html">
               <input type="button" value="LEER MAS!">
             </a>
@@ -494,20 +494,20 @@
       </div>
 
       <!-- Card 3 -->
-      <div class="ribbonUno__card" id="ministerios">
-        <div class="ribbonUno__card__imagen"></div>
-        <div class="ribbonUno__card__texto">
-          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-          <div class="ribbonUno__card__titulo">
-            <h2>Ministerios</h2>
+      <div class="ministerio__card">
+        <div class="ministerio__card__imagen ministerio__card__imagen--enseñanza"></div>
+        <div class="ministerio__card__texto">
+          <h3 class="ministerio__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministerio__card__titulo">
+            <h2>Enseñanza</h2>
           </div>
-          <div class="ribbonUno__card__linea"></div>
-          <div class="ribbonUno__card__parrafo">
+          <div class="ministerio__card__linea"></div>
+          <div class="ministerio__card__parrafo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
               aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
               voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
           </div>
-          <div class="ribbonUno__card__btn">
+          <div class="ministerio__card__btn">
             <a href="cuarto.html">
               <input type="button" value="LEER MAS!">
             </a>
@@ -516,20 +516,42 @@
       </div>
 
       <!-- Card 4 -->
-      <div class="ribbonUno__card" id="ministerios">
-        <div class="ribbonUno__card__imagen"></div>
-        <div class="ribbonUno__card__texto">
-          <h3 class="ribbonUno__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-          <div class="ribbonUno__card__titulo">
-            <h2>Ministerios</h2>
+      <div class="ministerio__card">
+        <div class="ministerio__card__imagen ministerio__card__imagen--intersecion"></div>
+        <div class="ministerio__card__texto">
+          <h3 class="ministerio__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministerio__card__titulo">
+            <h2>Intersecion</h2>
           </div>
-          <div class="ribbonUno__card__linea"></div>
-          <div class="ribbonUno__card__parrafo">
+          <div class="ministerio__card__linea"></div>
+          <div class="ministerio__card__parrafo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
               aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
               voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
           </div>
-          <div class="ribbonUno__card__btn">
+          <div class="ministerio__card__btn">
+            <a href="cuarto.html">
+              <input type="button" value="LEER MAS!">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 5 -->
+      <div class="ministerio__card">
+        <div class="ministerio__card__imagen ministerio__card__imagen--alabanza"></div>
+        <div class="ministerio__card__texto">
+          <h3 class="ministerio__card__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
+          <div class="ministerio__card__titulo">
+            <h2>Alabanza</h2>
+          </div>
+          <div class="ministerio__card__linea"></div>
+          <div class="ministerio__card__parrafo">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque esse est unde molestiae atque
+              aperiam autem molestias iste, aspernatur ipsa alias. Libero voluptatem vitae possimus. Minus, doloribus
+              voluptatum aliquid recusandae labore deleniti, eligendi enim ea earum </p>
+          </div>
+          <div class="ministerio__card__btn">
             <a href="cuarto.html">
               <input type="button" value="LEER MAS!">
             </a>
