--- a/index.html
+++ b/index.html
@@ -569,28 +569,30 @@
 
     <section class="cuarto" id="cuarto">
       <!-- Cuarto de oracion -->
-      <div class="cuartoCard">
-        <div class="cuartoCard__imagen"></div>
 
-        <div class="cuartoCard__texto">
-          <h3 class="cuartoCard__tituloPre">Tristán Suárez 🙌</h3>
-          <div class="cuartoCard__titulo">
-            <h2>Cuarto de Adoración e intercesión</h2>
-          </div>
-          <div class="cuartoCard__linea"></div>
-          <div class="cuartoCard__parrafo">
-            <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman día y noche,
-              apasionados por ver a Jesús regresar y gobernar en las naciones desde Jerusalén.
-              Este clamor es cada vez más intenso y va en aumento. No pararemos de cantar y adorar HASTA que EL venga.
-            </p>
-          </div>
-          <div class="cuartoCard__btn">
-            <a href="cuarto.html">
-              <input type="button" value="ENTRAR!">
-            </a>
-          </div>
+      <div class="cuarto__texto">
+        <h3 class="cuarto__tituloPre">Tristán Suárez 🙌</h3>
+        <div class="cuarto__titulo">
+          <h2>Cuarto de Adoración e intercesión</h2>
+        </div>
+        <div class="cuarto__linea"></div>
+        <div class="cuarto__parrafo">
+          <p>Te animo a que seas parte de esta generación que siendo llenos por el Espiritu Santo claman día y noche,
+            apasionados por ver a Jesús regresar y gobernar en las naciones desde Jerusalén.
+            Este clamor es cada vez más intenso y va en aumento. No pararemos de cantar y adorar HASTA que EL venga.
+          </p>
+        </div>
+        <div class="cuarto__btn">
+          <a href="cuarto.html">
+            <input type="button" value="ENTRAR!">
+          </a>
         </div>
       </div>
+
+      <div class="cuarto__imagen">
+        <img src="img/cuartodeoracion.jpg" alt="">
+      </div>
+
     </section>
 
 
