--- a/index.html
+++ b/index.html
@@ -329,6 +329,8 @@
       </div>
     </aside>
 
+
+
     <!-- Actividades de la Iglesia-->
     <section class="iglesia" id="actividades">
 
@@ -341,7 +343,7 @@
       <div class="iglesia__contenedor">
 
         <!--Card niños-->
-        <div class="iglesia__card" data-aos="zoom-in">
+        <div class="iglesia__card " data-aos="zoom-in">
           <div class="iglesia__imagen iglesia__imagen--niños">
           </div>
           <div class="iglesia__cardTexto">
@@ -349,7 +351,7 @@
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
+            <input type="button" class="iglesia__boton iglesia__ninios" value="VER MÁS!">
           </div>
         </div>
 
@@ -363,7 +365,7 @@
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
+            <input type="button" class="iglesia__boton iglesia__preadolescentes" value="VER MÁS!">
           </div>
         </div>
 
@@ -377,7 +379,7 @@
               servicio. </p>
 
             <a href="#modal">
-              <input type="button" class="iglesia__boton" value="VER MÁS!">
+              <input type="button" class="iglesia__boton iglesia__jovenes" value="VER MÁS!">
             </a>
           </div>
         </div>
@@ -391,7 +393,7 @@
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
+            <input type="button" class="iglesia__boton iglesia__matriJovenes" value="VER MÁS!">
           </div>
         </div>
 
@@ -404,14 +406,30 @@
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
+            <input type="button" class="iglesia__boton iglesia__matriAdultos" value="VER MÁS!">
           </div>
+        </div>
+      </div>
+
+      <!-- Modal Nuevo -->
+      <div class="iglesia__modal" id="iglesiaModal">
+        <div class="iglesia__modal__card">
+          <div class="iglesia__modal__contenedor--titulo">
+            <h1 class="iglesia__modal__titulo">Hola Mundo!👈</h1>
+          </div>
+          <p class="iglesia__modal__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+            dignissimos. In unde non quibusdam cumque possimus atque, libero, recusandae sequi, incidunt assumenda
+            fugiat sit consectetur nesciunt et! Voluptate odit rerum veniam autem et quia in, vel hic quod suscipit
+            minus aliquam, enim quisquam. Animi consectetur quod corporis, placeat vero iste.</p>
+          <button class="iglesia__btn__cerrar">CERRAR!</button>
         </div>
 
       </div>
+
+
     </section>
 
-    <!--Modal jovenes -->
+    <!--Modal jovenes 
     <div class="popup__container" id="modal">
       <div class="popup__card">
         <div class="popup__img"></div>
@@ -419,7 +437,8 @@
           <h2>Ministerio Jovenes</h2>
           <p>Un espacio donde cientos de chicos y chicas descubren su propósito divino para nunca más soltarlo.
             Cada sábado nos juntamos para acercarnos al corazón de nuestro Creador; para disfrutar de amistades que
-            sacan lo mejor de nosotros, para soñar, reír y llorar juntos. Anhelamos que cada joven descubra el potencial
+            sacan lo mejor de nosotros, para soñar, reír y llorar juntos. Anhelamos que cada joven descubra el
+            potencial
             que Dios depósito en él, que sueñe en grande y que deje huella en nuestra sociedad.
             Somos jóvenes con propósito, que desarrollan su potencial, predican a Jesús y sirven a los demás. <br>
             <strong> Horario de reunion:</strong>
@@ -435,7 +454,11 @@
         </div>
         <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
       </div>
-    </div>
+    </div>-->
+
+
+
+
 
     <!--ribbonUno-->
     <div class="ministerio" id="ministerios">
