--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
             Dios nos bendiga!
           </details>
         </p>
+      </div>
+
+      <div class="mision__imagen">
         <img src="img/collageNuevo.png" alt="">
         <h5 class="t-stroke t-shadow" id="stroke">SOMOS IGLESIA</h5>
       </div>
