arreglo menu desbordado

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">Misión y Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
-        <p class="mision__parrafo" data-aos="fade-left">
+        <p class="mision__parrafo">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
           social, una Iglesia formadora de líderes, que bendiga al pueblo de Dios nacional e internacional, una Iglesia
           fundamentada en el estudio de la Palabra de Dios, una Iglesia abierta a todos los dones espirituales, en
@@ -277,6 +277,7 @@
         <img src="img/collageNuevo.png" alt="">
         <h5 class="t-stroke t-shadow" id="stroke">SOMOS IGLESIA</h5>
       </div>
+
     </section>
 
     <!--banner-->
