--- a/index.html
+++ b/index.html
@@ -558,9 +558,9 @@
     </div>
 
     <!-- ribbon -->
-    <div class="ribbon">
+    <!-- <div class="ribbon">
       <div class="ribbon__diagonal"></div>
-    </div>
+    </div> -->
 
 
     <section class="cuarto" id="cuarto">
@@ -585,9 +585,9 @@
         </div>
       </div>
 
-      <div class="cuarto__imagen">
+      <!-- <div class="cuarto__imagen">
         <img src="img/cuartodeoracion.jpg" alt="">
-      </div>
+      </div> -->
 
     </section>
 
