--- a/index.html
+++ b/index.html
@@ -95,20 +95,14 @@
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
 
-        <div class="navbar__social navbarSocial--on">
-          <a href=""><img src="img/facebook icono.svg" class="navFace" alt=""></a>
-          <a href=""><img src="img/instagram icono.svg" class="navInsta" alt=""></a>
-          <a href=""><img src="img/youtube icono.svg" class="navYoutube" alt=""></a>
-        </div>
-
       </ul>
 
       <!--SEGUINOS-->
-      <div class="navbar__social">
-        <a href=""><img src="img/facebook icono.svg" class="navFace" alt=""></a>
-        <a href=""><img src="img/instagram icono.svg" class="navInsta" alt=""></a>
-        <a href=""><img src="img/youtube icono.svg" class="navYoutube" alt=""></a>
-      </div>
+      <!-- <div class="navbar__social">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div> -->
 
 
 
@@ -120,19 +114,30 @@
     <!--Main (Principal)-->
     <main class="main" id="main">
 
-      <div class="main__text" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+      <div class="main__text">
         <h3 class="main__tituloFondo">Iglesia Cristiana El Encuentro</h3>
         <h3 class="main__tituloPre">Iglesia Cristiana</h3>
         <div class="main__linea"></div>
         <h1 class="main__titulo">EL ENCUENTRO</h1>
-        <h4 class="main__tituloSub">Tristán Suárez</h4>
+        <p class="main__tituloSub">El lugar de tu encuentro con Dios! 
+          son muy bienvenidos a nuestra casa, tu casa!
+        </p>
+
+        <div class="main__btn">
+          <a href="#rehma">
+            <input type="button" value="VER MÁS">
+          </a>
+        </div>
       </div>
 
-      <div class="main__btn">
-        <a href="#rehma">
-          <input type="button" value="VER MÁS">
-        </a>
+      <!--SEGUINOS-->
+      <div class="main__social--lateral">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
       </div>
+
+  
     </main>
 
     <!--boton whatsapp-->
