--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <nav class="navbar" id="navbar">
 
       <a href="#header">
-        <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
+        <img loading="lazy" src="img/Logo1.jpg" class="navbar__logo" alt="">
       </a>
 
       <ul class="navbar__item">
@@ -93,12 +93,11 @@
       </ul>
 
       <!--SEGUINOS-->
-      <!-- <div class="navbar__social">
+      <div class="navbar__social">
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-youtube"></i>
-      </div> -->
-
+      </div>
 
 
       <div class="navbar__menu">
@@ -110,11 +109,11 @@
     <main class="main" id="main">
 
       <div class="main__text">
-        <h3 class="main__tituloFondo">Iglesia Cristiana El Encuentro</h3>
+        <!-- <h3 class="main__tituloFondo">Iglesia Cristiana El Encuentro</h3> -->
         <h3 class="main__tituloPre">Iglesia Cristiana</h3>
         <div class="main__linea"></div>
         <h1 class="main__titulo">EL ENCUENTRO</h1>
-        <p class="main__tituloSub">El lugar de tu encuentro con Dios! 
+        <p class="main__tituloSub">El lugar de tu encuentro con Dios!
           son muy bienvenidos a nuestra casa, tu casa!
         </p>
 
@@ -125,15 +124,9 @@
         </div>
       </div>
 
-      <!--SEGUINOS-->
-      <div class="main__social--lateral">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-youtube"></i>
-      </div>
-
-  
     </main>
+
+
 
     <!--boton whatsapp-->
     <a href="https://api.whatsapp.com/send?phone=+51987654321" class="btn__wsp" target="_blank">
@@ -554,7 +547,6 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <!-- ribbon -->
@@ -585,9 +577,17 @@
         </div>
       </div>
 
-      <!-- <div class="cuarto__imagen">
-        <img src="img/cuartodeoracion.jpg" alt="">
-      </div> -->
+      <div class="cuarto__imagen cuarto__imagen--uno">
+        <img src="img/cuarto6.jpg" alt="">
+      </div>
+
+      <div class="cuarto__imagen cuarto__imagen--dos">
+        <img src="img/cuarto5.jpg" alt="">
+      </div>
+
+      <div class="cuarto__imagen cuarto__imagen--tres">
+        <img src="img/cuarto4.jpg" alt="">
+      </div>
 
     </section>
 
