--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
   <!--Preloader-->
-  <div class="loader__contenedor">
+  <!-- <div class="loader__contenedor">
     <div class="loader__conjunto">
       <div class="elemento__1">
         <i class="fa-solid fa-arrow-down-long"></i>
@@ -59,8 +59,7 @@
       </div>
 
     </div>
-
-  </div>
+  </div> -->
 
   <!--contenedor general-->
   <div class="contenedor">
