cree carpeta css

--- a/cuarto.html
+++ b/cuarto.html
@@ -17,10 +17,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Reset Pro-->
-    <link rel="stylesheet" href="resetPro.css">
+    <link rel="stylesheet" href="css/resetPro.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="cuarto.css">
+    <link rel="stylesheet" href="css/cuarto.css">
 
     <!--aos js. -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
