--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Reset Pro-->
-  <link rel="stylesheet" href="resetPro.css">
+  <link rel="stylesheet" href="css/resetPro.css">
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Media Querys -->
-  <link rel="stylesheet" href="mediaQuerys.css">
+  <link rel="stylesheet" href="css/mediaQuerys.css">
   <!-- Patterns -->
   <link href="https://unpkg.com/pattern.css" rel="stylesheet">
   <!-- Swiper -->
@@ -31,35 +31,6 @@
 </head>
 
 <body>
-
-  <!--Preloader-->
-  <!-- <div class="loader__contenedor">
-    <div class="loader__conjunto">
-      <div class="elemento__1">
-        <i class="fa-solid fa-arrow-down-long"></i>
-      </div>
-
-      <div class="elemento__2">
-        <span class="vertical"></span>
-        <span class="horizontal"></span>
-      </div>
-
-      <div class="elemento__3">
-        <span class="circulo__1"></span>
-        <span class="circulo__2"></span>
-
-      </div>
-
-      <div class="elemento__4">
-        <i class="fa-solid fa-arrow-down-long"></i>
-      </div>
-
-      <div class="elemento__5">
-        <i class="fa-solid fa-arrow-down-long"></i>
-      </div>
-
-    </div>
-  </div> -->
 
   <!--contenedor general-->
   <div class="contenedor">
