--- a/podcast.html
+++ b/podcast.html
@@ -17,13 +17,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--Reset Pro-->
-    <link rel="stylesheet" href="resetPro.css">
+    <link rel="stylesheet" href="css/resetPro.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="podcast.css">
+    <link rel="stylesheet" href="css/podcast.css">
 
     <!-- Custom Styles Media Querys -->
-    <link rel="stylesheet" href="mediaQuerys.css">
+    <link rel="stylesheet" href="css/mediaQuerys.css">
 
     <!--aos js. -->
 
