--- a/index.html
+++ b/index.html
@@ -121,19 +121,14 @@
 
         <div class="article__texto" data-aos="fade-right" id="rehma-texto">
           <blockquote cite="https://www.bible.com/es/bible/128/JOS.1.NVI">
-            <p class="article__parrafo">Ya te lo he ordenado: ¡Sé fuerte y valiente! <br> ¡No tengas miedo ni te
-              desanimes! Porque el Señor tu
-              Dios
-              te
-              acompañará donde quiera que vayas».
-
+            <p class="article__parrafo">“Si permanece la obra de alguno que ha edificado sobre el fundamento, recibirá recompensa.”
               <br />
               <br />
-              Josué 1:9 (NVI)
+              1 Corintios 3:14 LBLA
             </p>
           </blockquote>
         </div>
-        <p class="article__pie">Palabra Rehma 2022</p>
+        <p class="article__pie">Palabra Rehma 2023</p>
       </div>
     </article>
 
